# githubActionsTerraformDocker

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  DevOps-API.postman_collection.json  README.md  docker-compose.yml  iam list-policies --query Policies[?contains(PolicyName, `LoadBalancing`)].PolicyName --max-items 20  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test-aws-endpoints.sh  test-endpoints.sh  update-docs.sh  validate.sh
.github/workflows/: ci-cd-pipeline.yml  terraform-validation.yml
docker/: .dockerignore  Dockerfile  Dockerfile.grafana  Dockerfile.prometheus
docs/: CI_CD_GUIDE.md  DEPLOYMENT_DOCKER_COMPOSE.md  DEPLOYMENT_TERRAFORM.md  MONITORING.md  QUICKSTART.md  SECURITY_COMPLIANCE.md
monitoring/: prometheus.yml
monitoring/grafana-provisioning/dashboards/: dashboard-config.yaml  dashboard-provider.yml  devops-app-dashboard.json  http_monitor.json  telemetry_dashboard.json
monitoring/grafana-provisioning/datasources/: prometheus.yaml
security/: SECURITY.md  generate-sbom.sh  sbom-template.xml
src/: server.py  test_server.py
terraform/: destroy.sh  github_actions_policy.json  init.sh  main.tf  terraform.tfvars.example
