[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-app"
version = "1.0.0"
description = "Aplicación DevOps con GitHub Actions, Terraform y Docker"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DevOps Team", email = "devops@example.com"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pylint==3.0.3",
    "black==23.12.1",
    "isort==5.13.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
